# rusty-chat

./: .editorconfig  .gitignore  Cargo.toml  LICENCE  README.md  ci.sh
frontend/: package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.tsx  config.ts  index.tsx  store.ts
frontend/src/api/: actions.ts  proto.ts  saga.ts  types.ts
frontend/src/common/: Header.tsx
frontend/src/feed/: Feed.tsx  Message.tsx  MessageList.tsx  PostField.tsx  User.tsx  UserList.tsx  actions.ts  reducer.ts  saga.ts  types.ts
frontend/src/home/: Home.tsx
frontend/src/user/: UserAvatar.tsx  actions.ts  reducer.ts  saga.ts  types.ts
src/: client.rs  error.rs  hub.rs  lib.rs  main.rs  proto.rs  server.rs
src/model/: feed.rs  message.rs  mod.rs  user.rs
