[package]
name = "rusty-chat"
version = "0.1.0"
authors = ["Tin Rabzelj <tin@flinect.com>"]
edition = "2018"

[dependencies]
serde = { version = "1.0.105", features = ["derive"] }
serde_json = "1.0.50"
log = "0.4.8"
env_logger = "0.7.1"
uuid = { version = "0.8.1", features = ["serde", "v4"] }
tokio = { version = "0.2.20", features = ["full"] }
tokio-tungstenite = "0.10.1"
futures = "0.3.5"
chrono = { version = "0.4.11", features = ["serde"] }
regex = "1.3.7"
lazy_static = "1.4.0"
