[package]
name = "rusty-chat"
version = "0.1.0"
authors = ["Tin Rabzelj <tin@flinect.com>"]
edition = "2021"

[dependencies]
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
log = "0.4.20"
env_logger = "0.10.1"
chrono = { version = "0.4.31", features = ["serde"] }
regex = "1.10.2"
lazy_static = "1.4.0"
uuid = { version = "1.6.1", features = ["serde", "v4"] }
futures = "0.3.30"
tokio = { version = "1.35.1", features = ["full"] }
warp = "0.3.6"
tokio-stream = { version = "0.1.14", features = ["sync"] }
